Dto 다건 추가 으로 메소드 코드 수정